crates/control-plane-api/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_duplicate_bindings-2.snap
---
source: crates/agent/src/discovers/specs.rs
expression: fetched_capture
---
{
  "endpoint": {
    "connector": {
      "image": "old/image",
      "config": {
        "$serde_json::private::RawValue": "{\"fetched\":1}"
      }
    }
  },
  "bindings": [
    {
      "resource": {
        "$serde_json::private::RawValue": "{\"modified\":1,\"stream\":\"foo\"}"
      },
      "disable": true,
      "target": "acmeCo/does-not-exist"
    },
    {
      "resource": {
        "$serde_json::private::RawValue": "{\"stream\":\"foo\"}"
      },
      "disable": true,
      "target": "acmeCo/fooName2"
    }
  ]
}
