crates/control-plane-api/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_duplicate_bindings.snap
---
source: crates/agent/src/discovers/specs.rs
expression: error
---
existing capture model contains multiple bindings with the same resource path (foo)
