crates/control-plane-api/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_update-2.snap
---
source: crates/agent/src/discovers/specs.rs
expression: fetched_capture
---
{
  "endpoint": {
    "connector": {
      "image": "old/image",
      "config": {
        "$serde_json::private::RawValue": "{\"fetched\":1}"
      }
    }
  },
  "bindings": [
    {
      "resource": {
        "$serde_json::private::RawValue": "{\"modified\":1,\"stream\":\"foo\"}"
      },
      "target": "acmeCo/renamed"
    },
    {
      "resource": {
        "$serde_json::private::RawValue": "{\"stream\":\"bar\"}"
      },
      "disable": true,
      "target": "acmeCo/barName"
    },
    {
      "resource": {
        "$serde_json::private::RawValue": "{\"modified\":\"yup\",\"stream\":\"disabled\"}"
      },
      "disable": true,
      "target": "test/collection/disabled"
    }
  ],
  "interval": "34s",
  "shards": {
    "maxTxnDuration": "12s"
  }
}
