crates/control-plane-api/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_update.snap
---
source: crates/agent/src/discovers/specs.rs
expression: out
---
(
    [
        Binding {
            target: Collection(
                "acmeCo/renamed",
            ),
            document_schema: Schema(
                RawValue(
                    {"const":"discovered"},
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "foo",
            ],
            disable: false,
        },
        Binding {
            target: Collection(
                "acmeCo/barName",
            ),
            document_schema: Schema(
                RawValue(
                    false,
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "bar",
            ],
            disable: true,
        },
        Binding {
            target: Collection(
                "test/collection/disabled",
            ),
            document_schema: Schema(
                RawValue(
                    false,
                ),
            ),
            collection_key: [],
            is_fallback_key: false,
            resource_path: [
                "disabled",
            ],
            disable: true,
        },
    ],
    {
        [
            "bar",
        ]: Changed {
            target: Collection(
                "acmeCo/barName",
            ),
            disable: true,
        },
    },
    {
        [
            "removed",
        ]: Changed {
            target: Collection(
                "acmeCo/discarded",
            ),
            disable: false,
        },
    },
)
