crates/control-plane-api/src/discovers/snapshots/agent__discovers__specs__tests__capture_merge_upsert.snap
---
source: crates/agent/src/discovers/specs.rs
expression: json!(out)
---
[
  {
    "bindings": [
      {
        "resource": {
          "modified": 1,
          "stream": "foo"
        },
        "target": "acmeCo/renamed"
      },
      {
        "resource": {
          "modified": 2,
          "stream": "bar"
        },
        "target": "acmeCo/bar"
      },
      {
        "disable": true,
        "resource": {
          "stream": "baz"
        },
        "target": "acmeCo/baz"
      }
    ],
    "endpoint": {
      "connector": {
        "config": {
          "discovered": 1
        },
        "image": "new/image"
      }
    }
  },
  [
    {
      "disable": true,
      "documentSchema": {
        "const": 1
      },
      "recommendedName": "foo",
      "resourceConfig": {
        "stream": "foo"
      }
    },
    {
      "disable": true,
      "documentSchema": {
        "const": 2
      },
      "recommendedName": "bar",
      "resourceConfig": {
        "stream": "bar"
      }
    },
    {
      "disable": true,
      "documentSchema": {
        "const": 3
      },
      "recommendedName": "baz",
      "resourceConfig": {
        "stream": "baz"
      }
    }
  ]
]
